old garbage_collector deleted and added new

--- a/libs/garbage_collector/Makefile
+++ b/libs/garbage_collector/Makefile
@@ -1,8 +1,7 @@
-NAME = garbage_collector.a
+NAME = garbage_collecter.a
 
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
-
+CFLAGS = -Wall -Wextra -Werror -Iinclude
 AR = ar
 RM = rm -f
 
@@ -13,34 +12,57 @@ BLUE := \033[1;34m
 RED := \033[0;31m
 RESET := \033[0m
 
-SRC = collector_close.c \
-      collector_init.c \
-      gc_calloc.c \
-      gc_collect.c \
-      gc_malloc.c \
-      gc_mark.c \
-      gc_mark_utils.c \
-      gc_memory_utils.c \
-      gc_realloc.c \
-      gc_state.c \
-      gc_sweep.c \
-      get_header_from_ptr.c
-
-SRCS = $(SRC)
+SRC_DIR = src
 OBJ_DIR = obj
-OBJS = $(addprefix $(OBJ_DIR)/,$(SRCS:.c=.o))
+
+SRC = memory/gc_malloc.c \
+      memory/gc_calloc.c \
+      memory/gc_realloc.c \
+      memory/gc_free.c \
+      collector/gc_collect.c \
+      collector/gc_mark.c \
+      collector/gc_sweep.c \
+      lifecycle/gc_create.c \
+      lifecycle/gc_destroy.c \
+      scope/gc_scope_push.c \
+      scope/gc_scope_pop.c \
+      scope/gc_scope_pop_all.c \
+      string/gc_strlen.c \
+      string/gc_strcmp.c \
+      string/gc_strncmp.c \
+      string/gc_strchr.c \
+      string/gc_strrchr.c \
+      string/gc_strdup.c \
+      string/gc_strndup.c \
+      string/gc_strjoin.c \
+      string/gc_atoi.c \
+      string/gc_itoa.c \
+      string/gc_uitoa.c \
+      string/gc_substr.c \
+      string/gc_strtrim.c \
+      utils/gc_bzero.c \
+      utils/memory_utils.c \
+      utils/gc_find_allocation.c \
+      config/gc_set_mode.c \
+      config/gc_get_mode.c \
+      config/gc_set_debug.c \
+      stats/gc_get_stats.c \
+      stats/gc_print_stats.c \
+      wrapper/gc_wrapper.c
+
+SRCS = $(addprefix $(SRC_DIR)/,$(SRC))
+OBJS = $(addprefix $(OBJ_DIR)/,$(SRC:.c=.o))
 
 all: $(NAME)
 
-$(OBJ_DIR)/%.o: %.c
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	@mkdir -p $(dir $@)
 	@printf '$(GREEN)Compiling %s...$(RESET)\n' "$<"
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS)
 	@printf '$(YELLOW)Creating static library %s$(RESET)\n' "$(NAME)"
-	$(AR) -rcs $(NAME) $(OBJS)
-	@printf '$(GREEN)Build complete!$(RESET)\n'
+	@$(AR) -rcs $(NAME) $(OBJS)
 
 clean:
 	@$(RM) $(OBJS)
@@ -53,26 +75,13 @@ fclean: clean
 
 re: fclean all
 
-help:
-	@printf '$(BLUE)╔════════════════════════════════════════╗$(RESET)\n'
-	@printf '$(BLUE)║  Garbage Collector - Build Targets    ║$(RESET)\n'
-	@printf '$(BLUE)╚════════════════════════════════════════╝$(RESET)\n'
-	@printf '\n'
-	@printf '$(YELLOW)Available targets:$(RESET)\n'
-	@printf '  $(GREEN)make$(RESET)\n'
-	@printf '    Build garbage collector library\n'
-	@printf '\n'
-	@printf '  $(GREEN)make clean$(RESET)\n'
-	@printf '    Remove object files\n'
-	@printf '\n'
-	@printf '  $(GREEN)make fclean$(RESET)\n'
-	@printf '    Remove all generated files\n'
-	@printf '\n'
-	@printf '  $(GREEN)make re$(RESET)\n'
-	@printf '    Rebuild from scratch\n'
-	@printf '\n'
-	@printf '$(YELLOW)Usage:$(RESET)\n'
-	@printf '    gcc your_code.c -L. -lgarbage_collector -o program\n'
-	@printf '\n'
+info:
+	@printf '\n$(BLUE)══════════════════════════════════════════════════════════════$(RESET)\n'
+	@printf '$(YELLOW)To integrate into your legacy projects, add to Makefile:$(RESET)\n\n'
+	@printf '  GC_LIB = path/to/garbage_collecter.a\n'
+	@printf '  GC_WRAP = -Wl,--wrap=malloc -Wl,--wrap=calloc -Wl,--wrap=realloc -Wl,--wrap=free\n\n'
+	@printf '  $$(NAME): $$(OBJS) $$(GC_LIB)\n'
+	@printf '  	$$(CC) $$(OBJS) $$(GC_LIB) $$(GC_WRAP) -o $$(NAME)\n\n'
+	@printf '$(BLUE)══════════════════════════════════════════════════════════════$(RESET)\n\n'
 
-.PHONY: all clean fclean re help
+.PHONY: all clean fclean re info info
